# NeonRabbitGW

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
devops/: Dockerfile  pipeline
examples/: c2.rs  c3.rs  secret.rs
examples/service/: dapr_client.rs  package.info
neongw-frontend/: package.json
neongw-frontend/src/: App.js  Layout.js  LeftMenu.css  LeftMenu.js  Login.css  Login.js  PersonList.js  PrivateRoute.js  ServiceList.js  config.js
neongw-frontend/tests/: sample.js  sample2.js
proto/: helloworld.proto
src/: config.rs  lib.rs  main.rs
src/controller/: gateway.rs  management.rs  mod.rs
src/middleware/: heartbeat.rs  middleware.rs  mod.rs  sample.rs  sample2.rs
src/pkg/: errors.rs  gateway.rs  mod.rs  registry.rs  rsp.rs  url.rs
src/registry/: consul.rs  mod.rs  registry.rs
src/secret/: secret.json
src/service/: client.rs  mod.rs
src/service/selector/: mod.rs  random.rs  rounbin.rs  selector.rs
src/vo/: mod.rs  rsp.rs
tests/: common_test.rs
